# practice-structure

./: .gitignore  Cargo.toml  licence.txt  readme.md
data/: lead.json  line.json  team.json
src/: main.rs
src/data/: data_import.rs  data_read.rs  diagrams.rs  mod.rs
src/models/: mod.rs  practice_models.rs
